[package]
name = "clean_xar_mounts"
version = "0.1.0"
authors = ["chip <chip@fb.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = "2.31"
filetime = "0.2.8"
lazy_static = "1.4.0"
nix = "0.20.2"
regex = "1.5.5"
slog = "2.7.*"
slog-term = "2.3.*"
tempfile = "2.2.*"
